--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,15 @@
 main {
-    display: flex;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .about-me-content {
     background-color: white;
     width: 40%;
-    margin: 20px auto;
+    margin: 20px 300px;
     padding: 1%;
     overflow: hidden;
+    float: left;
 }
 
 main h1 {
@@ -36,17 +37,21 @@ footer {
 
 header {
     background-color: white;
-    display: flex;
     justify-content: space-between;
     align-items: center;
     border-bottom: black 1px solid;
+    overflow: hidden; 
 }
 
 ul{
     list-style-type: none;
-    display: flex;
     gap: 20px;
     text-decoration: none;
+}
+
+ul li {
+    display: inline-block;
+    margin-right: 20px;
 }
 
 nav {
@@ -61,7 +66,13 @@ nav ul li a {
 }
 
 header h1 {
+    float: left;
     margin-left: 1%;
+}
+
+header nav {
+    margin-top: 1%;
+    float: right;
 }
 
 .sidebar {
@@ -69,9 +80,8 @@ header h1 {
     padding: 2%;
     align-items: center;
     text-align: center;
-    margin-left: -200px;
     margin-right: 200px;
-    margin-top: 20px;
+    margin-top: -600px;
     height: 5%;
     float: right;
 }
